tweak to height when mobile landscape to prevent overflow

--- a/tictactoe.css
+++ b/tictactoe.css
@@ -43,7 +43,7 @@ html, body {
 
 @media (max-height: 552px){
 	.grid {
-		height: 100vh;
+		height: 90vh;
 		width:100%;
 		text-align: center;
 		
@@ -53,7 +53,7 @@ html, body {
 	}
 
 	.row {
-		height: 33vh;
+		height: 30vh;
 		width: 100%;
 		display:inline-block;
 		margin: 0 auto;
@@ -103,7 +103,7 @@ html, body {
 @media (max-height: 552px){
 	.square {
 		width: 32%;
-		height: 31.5vh;		
+		height: 29vh;		
 		margin-left:0.025%;
 		margin-right:0.025%;
 		margin-bottom: 0.025%;
